--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-tags": "^2.2.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
